# RMEC

./: .clang-format  .clang-tidy  .clangd  .gitignore  .mxproject  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  powerful_framework.ioc
Core/app/: ARCHITECTURE.md  README.md  ins_task.cpp  ins_task.hpp  robot.cpp  robot_def.hpp  robot_topics.hpp  robot_types.hpp
Core/app/comm_task/: README.md  comm_task.cpp  comm_task.hpp
Core/app/daemon_task/: README.md  daemon_task.cpp  daemon_task.hpp
Core/app/ins_task/: README.md  ins_task.hpp
Core/app/motor_task/: README.md  chassis_motors.cpp  chassis_motors.hpp  gimbal_motors.cpp  gimbal_motors.hpp  motor_task.cpp  motor_task.hpp  shoot_motors.cpp  shoot_motors.hpp
Core/app/referee_task/: referee_task.cpp  referee_task.hpp
Core/app/remote_task/: README.md  remote_task.cpp  remote_task.hpp
Core/app/robot_task/: robot_task.cpp  robot_task.hpp
Core/app/vision_task/: vision_task.cpp  vision_task.hpp
Core/app/vofa_task/: vofa_task.cpp  vofa_task.hpp
Core/module/: README.md  general_def.hpp  topic.hpp
Core/module/algorithm/: README.md  ahrs_math.hpp  pid_controller.cpp  pid_controller.hpp  quaternion_ekf.cpp  quaternion_ekf.hpp  rls2.hpp
Core/module/can_comm/: README.md  can_comm.hpp
Core/module/daemon/: README.md  daemon.hpp
Core/module/imu/: README.md  bmi088.cpp  bmi088.hpp  bmi088_reg.hpp  ins.hpp  ins_data.hpp
Core/module/lib/algorithm/kf/: kalman_filter.cpp  kalman_filter.hpp
Core/module/motor/: README.md  motor.hpp  motor_measure.hpp  power_limiter.cpp  power_limiter.hpp
Core/module/motor/controller/: cascade_pid.hpp  feedback_override.hpp  mit_passthrough.hpp  mpc_tracker.hpp
Core/module/motor/driver/: dji_driver.cpp  dji_driver.hpp  dm_driver.cpp  dm_driver.hpp  ht_driver.cpp  ht_driver.hpp  lk_driver.cpp  lk_driver.hpp  mit_codec.hpp
Core/module/referee/: RoboMaster_2026_通信协议_V1_2_0.md  referee.cpp  referee.hpp  referee_def.hpp  referee_protocol.hpp  referee_ui.hpp
Core/module/remote/: README.md  remote.hpp
Core/module/remote/protocol/: dt7_data.hpp  dt7_protocol.cpp  dt7_protocol.hpp
Core/module/vision/: vision_comm.cpp  vision_comm.hpp  vision_data.hpp  vision_protocol.hpp
Core/module/vofa/: vofa.hpp
Core/sal/: TaskManager.hpp  freertos_heap.cc  sal.md  xStruct.hpp  xTools.hpp
Core/sal/can/: sal_can.cc  sal_can.h
Core/sal/dwt/: sal_dwt.cc  sal_dwt.h
Core/sal/flash/: sal_flash.cc  sal_flash.h
Core/sal/gpio/: sal_gpio.cc  sal_gpio.h
Core/sal/i2c/: sal_i2c.cc  sal_i2c.h
Core/sal/log/: log.cc  log.h
Core/sal/pwm/: sal_pwm.cc  sal_pwm.h
Core/sal/spi/: sal_spi.cc  sal_spi.h
Core/sal/usart/: sal_usart.cc  sal_usart.h
Core/sal/usb/: sal_usb.cc  sal_usb.h
ExtLibs/DSP/Source/: CMakeLists.txt
ExtLibs/MatrixRobotics/: matrix.h  robotics.cpp  utils.cpp
Inc/: FreeRTOSConfig.h  stm32f4xx_it.h  usbd_cdc_if.h
Src/: can.c  freertos.c  main.c  spi.c  stm32f4xx_it.c  usbd_cdc_if.c
Toolchain/: Makefile  STM32F407IGHx_FLASH.ld  STM32F407XX_FLASH.ld  openocd_dap.cfg  openocd_jlink.cfg  ozone.jdebug  startup_stm32f407xx.s
